    namespace.
  - Added support for list-style library names.

- Syntax expander
  - Removed support for (define-syntax (foo e r c) ...), which was
    undocumented and not officially supported anyway.
  - define and friends are now aggressively rejected in "expression
    contexts" (i.e., anywhere but toplevel or as internal defines).

- Eggs management
  - Egg-installation and building has been completely overhauled.
  - .meta + .setup files have been merged into a single declarative
    ".egg" file.
  - More static checks for egg descriptions, simplified generation
    of OS-specific build + install commands that is (hopefully)
    more practical for package maintainers.
  - Egg sources are cached locally to reduce download and rebuild
    times.
  - Dropped many obscure or unimportant options and featurey from
    `chicken-install`: (`-keep-installed`, `-reinstall`, `-proxy`,
    `-no-install`, `-username`, `-password`, `-init`, `-deploy`,
    `-keep-going`, `-scan`, `-csi`, `-show-depends`, `-show-foreign-depends`,
    `-prefix`.
  - Eggs can now be installed and located in multiple directories,
    using the `CHICKEN_REPOSITORY_PATH` + `CHICKEN_INSTALL_REPOSITORY`
    environment variables.
  - Static compilation of eggs is now fully supported and static
    versions of compiled eggs are available by default.

- Foreign function interface
  - The foreign type specifier "ssize_t" is now accepted, and "size_t"
    arguments now only accept positive integers.  Return values of
    type size_t are no longer truncated on 32-bit platforms.


4.12.1

- Security fixes
  - CVE-2017-6949: Remove unchecked malloc() call in SRFI-4 constructors
    when allocating in non-GC memory, resulting in potential 1-word
    buffer overrun and/or segfault (thanks to Lemonboy).
  - CVE-2017-9334: `length' no longer crashes on improper lists (fixes
    #1375, thanks to "megane").
  - The randomization factor of the symbol table was set before